--- a/default-settings.html
+++ b/default-settings.html
@@ -46,13 +46,13 @@
                   >FLEXISCOPE</a
                 >
               </div>
-              <div id="Hysteroscope" class="default-specialty-buttons-div" align="center">
-                  <a class="camera-button" href="#" data-camera="Hysteroscope"
+              <div id="Hysteroscopy" class="default-specialty-buttons-div" align="center">
+                  <a class="camera-button" href="#" data-camera="Hysteroscopy"
                     >HYSTERO</a
                   >
                 </div>
-                <div id="Laparoscope" class="default-specialty-buttons-div" align="center">
-                  <a class="camera-button" href="#" data-camera="Laparoscope"
+                <div id="Laparoscopy" class="default-specialty-buttons-div" align="center">
+                  <a class="camera-button" href="#" data-camera="Laparoscopy"
                     >LAPAROSCOPE</a
                   >
                 </div>
