--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="card-text-div">
           <p class="card-text-text">
-            The default settings for the 1688 CCU and our many of our legacy CCUs.
+            The default settings for the 1688 CCU and many of our legacy CCUs.
           </p>
         </div>
         <div class="card-btn-div"></div>
