Adding printer fixes and changes.

--- a/printer.html
+++ b/printer.html
@@ -14,34 +14,15 @@
   <body>
     <nav class="navbar">
       <!-- Nav-menu Div-->
-      <div id="home-icon-printer"></div>
-      <div class="container" id="js-navbar-toggle">
-        <div class="bar1"></div>
-        <div class="bar2"></div>
-        <div class="bar3"></div>
-      </div>
-      <div id="printer-home-icon-div-hide">
-        <a href="./msa.html" class="money-settings-home-anchor"
-          ><img src="./images/home.jpg" alt="home"
-        /></a>
-      </div>
-      <p>
-        <a
-          href="./printer.html"
-          id="printer-logo"
-          class="logo"
-          class="nav-links"
-          >Printer Settings</a
-        >
-      </p>
-      <div id="printer-back-button" class="default-logo">
-        <img src="./images/arrow.jpg" alt="back-arrow" />
-      </div>
-      <ul class="main-nav" id="js-menu">
-        <li>
-          <a href="./msa.html" class="nav-links">Back To CCU Money Settings</a>
-        </li>
-      </ul>
+
+      <div class="navbar-backbtn-logo-home-div">
+        <div id="printer-back-button" class="printer-back-button"></div>
+        <!-- <div id="printer-back-button" class="default-logo"> -->
+          <div class="printer-logo-div">
+            <p class="printer-logo-text">Printer Settings </p>
+          </div>
+          <div class="home-icon-printer" id="home-icon-printer"></div>
+        </div> 
     </nav>
     <!-- Added Note to commit-->
     <!-- printer-wrapper-->
