Working on refactoring the printer settings feature.

--- a/printer.html
+++ b/printer.html
@@ -31,12 +31,12 @@
         <h1 class="">Printer Settings Coming Soon!</h1>
       </div> -->
       <div class="title-div">
-        <h1 id="title-element" class="">Select SDC</h1>
+        <h1 id="title-element" class="title-element">Select SDC</h1>
       </div>
       <div id="sdc-div">
         <div class="printer-title">
           <!-- Capture Device Buttons -->
-          <div id="top-sdc-div" class="sdc-div">
+          <div id="top-sdc-div" class="sdcs-div">
             <div class="first-botton-div">
               <div id="hub" class="sdc-buttons-div" align="center">
                 <a
@@ -139,7 +139,7 @@
           </div>
         </div>
         <!-- Printer settings divs -->
-        <div id="printer-settings-main-div">
+        <div id="printer-settings-main-div" class="printer-settings-main-div">
           <!-- Arthroscopy Printer Settings -->
           <div id="hub-arthro-settings-div" style="display: none">
             <div class="hub-printer-settings-title-div">
@@ -211,7 +211,7 @@
           </div>
           <!-- Laparscopy Printer Settings -->
 
-          <div id="hub-lap-settings-div" style="display: none">
+          <div id="hub-lap-settings-div" class="hub-lap-settings-div">
             <div class="hub-printer-settings-title-div">
               <h3 class="settings-title-h3">1688 Laparoscopy</h3>
               <p class="title-text-printer-settings">Printer Settings</p>
