Refactoring the printer settings for the landing page feature.

--- a/printer.html
+++ b/printer.html
@@ -18,7 +18,7 @@
       <div class="navbar-backbtn-logo-home-div">
         <div id="printer-back-button" class="printer-back-button"></div>
         <!-- <div id="printer-back-button" class="default-logo"> -->
-          <div class="printer-logo-div">
+          <div id="printer-logo-div" class="printer-logo-div">
             <p class="printer-logo-text">Printer Settings </p>
           </div>
           <div class="home-icon-printer" id="home-icon-printer"></div>
@@ -36,7 +36,7 @@
       <div id="sdc-div">
         <div class="printer-title">
           <!-- Capture Device Buttons -->
-          <div id="top-sdc-div" class="sdcs-div">
+          <div id="top-sdc-div" class="sdcs-div" >
             <div class="first-botton-div">
               <div id="hub" class="sdc-buttons-div" align="center">
                 <a
@@ -69,7 +69,6 @@
           </div>
           <div
             id="top-printer-specialty-div"
-            style="display: none"
             class="printer-specialty-div"
           >
             <div class="first-botton-div">
@@ -141,7 +140,7 @@
         <!-- Printer settings divs -->
         <div id="printer-settings-main-div" class="printer-settings-main-div">
           <!-- Arthroscopy Printer Settings -->
-          <div id="hub-arthro-settings-div" style="display: none">
+          <div id="hub-arthro-settings-div" class="hub-arthro-settings-div">
             <div class="hub-printer-settings-title-div">
               <h3 class="settings-title-h3">1688 Arthroscopy</h3>
               <p class="title-text-printer-settings">Printer Settings</p>
@@ -280,7 +279,7 @@
             </div>
           </div>
           <!-- SpyPhi Printer Settings -->
-          <div id="hub-spy-settings-div" style="display: none">
+          <div id="hub-spy-settings-div" class="hub-spy-settings-div">
             <div class="hub-printer-settings-title-div">
               <h3 class="settings-title-h3">1688 Spi-Phi</h3>
               <p class="title-text-printer-settings">Printer Settings</p>
