Working on SDC3 SDP1000 printer settings.

--- a/printer.html
+++ b/printer.html
@@ -351,8 +351,8 @@
             </div>
           </div>
           <!-- SDC Printer Settings-->
-          <div id="sdc-printer-settings-div" style="display: block">
-            <div id="sdc-sdp1000-settings-div" style="display: none">
+          <div id="sdc-printer-settings-div" >
+            <div id="sdc-sdp1000-settings-div" class="sdc-sdp1000-settings-div">
               <div class="sdc-printer-settings-title-div">
                 <h3 class="settings-title-h3">SDC3 SDP1000</h3>
                 <p class="title-text-printer-settings">Printer Settings</p>
