Finishing printer settings' back functionality.

--- a/printer.html
+++ b/printer.html
@@ -364,7 +364,7 @@
                       <p class="printer-parameter">Brightness</p>
                     </div>
                   </div>
-                  <div class="sdc-sdp1000--settings-div">
+                  <div class="sdc-sdp1000-setting-div">
                     <div class="printer-settings">
                       <p class="printer-setting">130</p>
                     </div>
@@ -377,7 +377,7 @@
                       <p class="printer-parameter">Contrast</p>
                     </div>
                   </div>
-                  <div class="sdc-sdp1000--settings-div">
+                  <div class="sdc-sdp1000-setting-div">
                     <div class="printer-settings">
                       <p class="printer-setting">78</p>
                     </div>
@@ -390,7 +390,7 @@
                       <p class="printer-parameter">Phase</p>
                     </div>
                   </div>
-                  <div class="sdc-sdp1000--settings-div">
+                  <div class="sdc-sdp1000-setting-div">
                     <div class="printer-settings">
                       <p class="printer-setting">0</p>
                     </div>
@@ -403,7 +403,7 @@
                       <p class="printer-parameter">Chroma</p>
                     </div>
                   </div>
-                  <div class="sdc-sdp1000--settings-div">
+                  <div class="sdc-sdp1000-setting-div">
                     <div class="printer-settings">
                       <p class="printer-setting">-180</p>
                     </div>
@@ -416,7 +416,7 @@
                       <p class="printer-parameter">Sharpness</p>
                     </div>
                   </div>
-                  <div class="sdc-sdp1000--settings-div">
+                  <div class="sdc-sdp1000-setting-div">
                     <div class="printer-settings">
                       <p class="printer-setting">650</p>
                     </div>
@@ -426,7 +426,7 @@
             </div>
           </div>
           <!-- Printer SDC1000 Alt settings -->
-          <div id="sdc-sdp1000-alt-settings-div" style="display: none">
+          <div id="sdc-sdp1000-alt-settings-div" class="sdc-sdp1000-alt-settings-div" >
             <div class="sdc-printer-settings-title-div">
               <h3 class="settings-title-h3">SDC3 SDP1000 (Alternative)</h3>
               <p class="title-text-printer-settings">Printer Settings</p>
@@ -438,7 +438,7 @@
                     <p class="printer-parameter">Brightness</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">52</p>
                   </div>
@@ -451,7 +451,7 @@
                     <p class="printer-parameter">Contrast</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">104</p>
                   </div>
@@ -464,7 +464,7 @@
                     <p class="printer-parameter">Phase</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">5</p>
                   </div>
@@ -477,7 +477,7 @@
                     <p class="printer-parameter">Chroma</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">-420</p>
                   </div>
@@ -490,7 +490,7 @@
                     <p class="printer-parameter">Sharpness</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">800</p>
                   </div>
@@ -500,7 +500,7 @@
           </div>
           <!-- Printer end SDC1000 alt -->
           <!-- SDC-Ultra SDC1000 -->
-          <div id="sdc-ultra-sdp1000-settings-div" style="display: none">
+          <div id="sdc-ultra-sdp1000-settings-div" class="sdc-ultra-sdp1000-settings-div" >
             <div class="sdc-printer-settings-title-div">
               <h3 class="settings-title-h3">SDC Ultra SDP1000</h3>
               <p class="title-text-printer-settings">Printer Settings</p>
@@ -512,7 +512,7 @@
                     <p class="printer-parameter">Brightness</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">130</p>
                   </div>
@@ -525,7 +525,7 @@
                     <p class="printer-parameter">Contrast</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">78</p>
                   </div>
@@ -538,7 +538,7 @@
                     <p class="printer-parameter">Phase</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">0</p>
                   </div>
@@ -551,7 +551,7 @@
                     <p class="printer-parameter">Chroma</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">-180</p>
                   </div>
@@ -564,7 +564,7 @@
                     <p class="printer-parameter">Sharpness</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">650</p>
                   </div>
@@ -574,7 +574,7 @@
           </div>
           <!-- SDC-Ultra SDC1000 end -->
           <!-- SDC-Ultra SDC1000.alt -->
-          <div id="sdc-ultra-sdp1000-alt-settings-div" style="display: none">
+          <div id="sdc-ultra-sdp1000-alt-settings-div" class="sdc-ultra-sdp1000-alt-settings-div" >
             <div class="sdc-printer-settings-title-div">
               <h3 class="settings-title-h3">SDC Ultra SDP1000 (Alternative)</h3>
               <p class="title-text-printer-settings">Printer Settings</p>
@@ -586,7 +586,7 @@
                     <p class="printer-parameter">Brightness</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">0</p>
                   </div>
@@ -599,7 +599,7 @@
                     <p class="printer-parameter">Contrast</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">130</p>
                   </div>
@@ -612,7 +612,7 @@
                     <p class="printer-parameter">Phase</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">0</p>
                   </div>
@@ -625,7 +625,7 @@
                     <p class="printer-parameter">Chroma</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">-150</p>
                   </div>
@@ -638,7 +638,7 @@
                     <p class="printer-parameter">Sharpness</p>
                   </div>
                 </div>
-                <div class="sdc-sdp1000--settings-div">
+                <div class="sdc-sdp1000-setting-div">
                   <div class="printer-settings">
                     <p class="printer-setting">750</p>
                   </div>
