--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <div id="storz-card" class="card-container">
         <div id="storz-card-img-div" class="card-img-div"></div>
         <div class="card-title-div">
-          <h3 class="card-title-text">1688 Storz Settings</h3>
+          <h3 class="card-title-text">1688 Olympus Settings</h3>
         </div>
         <div class="card-text-div">
           <p class="card-text-text">
-            The most current Storz settings for our 1688 platform.
+            The most current Olymnpus settings for our 1688 platform.
           </p>
         </div>
         <div class="card-btn-div"></div>
