--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="card-btn-div"></div>
       </div>
       <!-- Storz -->
-      <div id="storz-card" class="card-container">
-        <div id="storz-card-img-div" class="card-img-div"></div>
+      <div id="olympus-card" class="card-container">
+        <div id="olympus-card-img-div" class="card-img-div"></div>
         <div class="card-title-div">
           <h3 class="card-title-text">1688 Olympus Settings</h3>
         </div>
