Building olympus page.

--- a/olympus.html
+++ b/olympus.html
@@ -21,8 +21,16 @@
         </nav>
     </div>
         <div class="olympus-body-container">
-            <div id="olympus-title-div" class="olympus-title-div"></div>
-            <div id="olympus-btn-div" class="olympus-btn-div"></div>
+            <div id="olympus-title-div" class="olympus-title-div">
+                <div class="olympus-ccu-monitor-title-div"><div class="olympus-title-text-span-div"><p class="olympus-title-text">1688 4K </p><span id="olympus-specialty-title-span" class="olympus-specialty-title-span"></span></div></div>
+                <div class="olympus-text-div">Olympus Settings</div>
+            </div>
+            <div id="olympus-btn-div" class="olympus-btn-div">
+                <div class="olympus-select-specialty-div">Select Specialty</div>
+                <div id="olympus-laser-specialty" data-specialty="Laser" class="olympus-specialty-button">Laser</div>
+                <div id="olympus-hysto-specialty" data-specialty="Hysteroscopy" class="olympus-specialty-button">Hysteroscopy</div>
+
+            </div>
         </div>
 </body>
 </html>
