Adding the contact page and the idea tile and form.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="card-btn-div"></div>
       </div>
-      <!-- Storz -->
+      <!-- Olympus -->
       <div id="olympus-card" class="card-container">
         <div id="olympus-card-img-div" class="card-img-div"></div>
         <div class="card-title-div">
@@ -41,7 +41,7 @@
         </div>
         <div class="card-btn-div"></div>
       </div>
-      <!-- Storz end -->
+      <!-- Olympus end -->
       <div id="printer-card" class="card-container">
         <div id="printer-card-img-div" class="card-img-div"></div>
         <div class="card-title-div">
@@ -91,6 +91,20 @@
         </div>
         <div class="card-btn-div"></div>
       </div>
+      <!-- Suggestions Tile-->
+      <div id="idea-card" class="card-container">
+        <div id="idea-card-img-div" class="card-img-div"></div>
+        <div id="idea-card-title" class="card-title-div">
+          <h3 class="card-title-text">Got An Idea?</h3>
+        </div>
+        <div class="card-text-div">
+          <p class="card-text-text">
+       Got an idea for a feature for the Tech Support App? Share it! We'd love to hear from you.
+          </p>
+        </div>
+        <div class="card-btn-div"></div>
+      </div>
+      <!-- Suggestions Tile End-->
     </div>
   </body>
 </html>
