--- a/olympus.html
+++ b/olympus.html
@@ -29,7 +29,10 @@
                 <div class="olympus-select-specialty-div">Select Specialty</div>
                 <div id="olympus-laser-specialty" data-specialty="Laser" class="olympus-specialty-button">Laser</div>
                 <div id="olympus-hysto-specialty" data-specialty="Hysteroscopy" class="olympus-specialty-button">Hysteroscopy</div>
-
+            </div>
+            <div id="olympus-settings-container" class="olympus-settings-container">
+                <div class="olympus-params-div"></div>
+                <div class="olympus-settings-div"></div>
             </div>
         </div>
 </body>
