Added contact container.

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
             <div id="contact-home-icon" class="contact-home-icon" >
             </div>       
         </nav>
+        <div class="contact-container"></div>
     </div>
     
 </body>
