--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="card-btn-div"></div>
       </div>
       <!-- Olympus -->
-      <div id="olympus-card" class="card-container">
+      <!-- <div id="olympus-card" class="card-container">
         <div id="olympus-card-img-div" class="card-img-div"></div>
         <div class="card-title-div">
           <h3 class="card-title-text">1688 Olympus Settings</h3>
@@ -40,7 +40,7 @@
           </p>
         </div>
         <div class="card-btn-div"></div>
-      </div>
+      </div> -->
       <!-- Olympus end -->
       <div id="printer-card" class="card-container">
         <div id="printer-card-img-div" class="card-img-div"></div>
@@ -79,7 +79,7 @@
         </div>
         <div class="card-btn-div"></div>
       </div>
-      <div id="contact-card" class="card-container">
+      <!-- <div id="contact-card" class="card-container">
         <div id="contact-card-img-div" class="card-img-div"></div>
         <div id="contact-card-title" class="card-title-div">
           <h3 class="card-title-text">Contact Us</h3>
@@ -90,7 +90,7 @@
           </p>
         </div>
         <div class="card-btn-div"></div>
-      </div>
+      </div> -->
       <!-- Suggestions Tile-->
       <div id="idea-card" class="card-container">
         <div id="idea-card-img-div" class="card-img-div"></div>
