Adding settings, both js and style.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="card-text-div">
           <p class="card-text-text">
-            The most current Olymnpus settings for our 1688 platform.
+            The most current Olympus settings for our 1688 platform.
           </p>
         </div>
         <div class="card-btn-div"></div>
