--- a/olympus.html
+++ b/olympus.html
@@ -22,7 +22,7 @@
     </div>
         <div class="olympus-body-container">
             <div id="olympus-title-div" class="olympus-title-div">
-                <div class="olympus-ccu-monitor-title-div"><div class="olympus-title-text-span-div"><p class="olympus-title-text">1688 4K </p><span id="olympus-specialty-title-span" class="olympus-specialty-title-span"></span></div></div>
+                <div class="olympus-ccu-monitor-title-div"><div class="olympus-title-text-span-div"><p class="olympus-title-text">1688</p><span id="olympus-specialty-title-span" class="olympus-specialty-title-span">4K</span></div></div>
                 <div class="olympus-text-div">Olympus Settings</div>
             </div>
             <div id="olympus-btn-div" class="olympus-btn-div">
@@ -31,8 +31,18 @@
                 <div id="olympus-hysto-specialty" data-specialty="Hysteroscopy" class="olympus-specialty-button">Hysteroscopy</div>
             </div>
             <div id="olympus-settings-container" class="olympus-settings-container">
-                <div class="olympus-params-div"></div>
-                <div class="olympus-settings-div"></div>
+                <div id="olympus-params-div" class="olympus-params-div">
+                </div>
+                <div id="olympus-settings-div" class="olympus-settings-div">
+                </div>
+            </div>
+            <div id="olympus-monitor-title-div" class="olympus-monitor-title-div">
+                <div class="olympus-monitor-ccu-monitor-title-div"><div class="olympus-monitor-title-text-span-div"><p class="olympus-monitor-title-text">4K</p><span id="olympus-monitor-specialty-title-span" class="olympus-monitor-specialty-title-span"></span></div></div>
+                <div class="olympus-monitor-text-div">Olympus Settings</div>
+            </div>
+            <div id="olympus-monitor-settings-container" class="olympus-monitor-settings-container">
+                <div id="olympus-monitor-params-div" class="olympus-monitor-params-div"><div id="olympus-monitor-param-div" class="olympus-monitor-param-div"></div></div>
+                <div id="olympus-monitor-settings-div" class="olympus-monitor-settings-div"><div id="olympus-monitor-setting-div" class="olympus-monitor-setting-div"></div></div>
             </div>
         </div>
 </body>
