Adding settings and params, with css and js functionality to ccu and four k monitor of olympus settings feature.

--- a/olympus.html
+++ b/olympus.html
@@ -41,8 +41,10 @@
                 <div class="olympus-monitor-text-div">Olympus Settings</div>
             </div>
             <div id="olympus-monitor-settings-container" class="olympus-monitor-settings-container">
-                <div id="olympus-monitor-params-div" class="olympus-monitor-params-div"><div id="olympus-monitor-param-div" class="olympus-monitor-param-div"></div></div>
-                <div id="olympus-monitor-settings-div" class="olympus-monitor-settings-div"><div id="olympus-monitor-setting-div" class="olympus-monitor-setting-div"></div></div>
+                <div id="olympus-monitor-params-div" class="olympus-monitor-params-div">
+                </div>
+                <div id="olympus-monitor-settings-div" class="olympus-monitor-settings-div">
+                </div>
             </div>
         </div>
 </body>
