Added media queries to the Olympus settings.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="card-btn-div"></div>
       </div>
-      <!-- <div id="contact-card" class="card-container">
+      <div id="contact-card" class="card-container">
         <div id="contact-card-img-div" class="card-img-div"></div>
         <div id="contact-card-title" class="card-title-div">
           <h3 class="card-title-text">Contact Us</h3>
@@ -90,7 +90,7 @@
           </p>
         </div>
         <div class="card-btn-div"></div>
-      </div> -->
+      </div>
       <!-- Suggestions Tile-->
       <div id="idea-card" class="card-container">
         <div id="idea-card-img-div" class="card-img-div"></div>
