--- a/olympus.html
+++ b/olympus.html
@@ -13,7 +13,7 @@
         <nav class="olympus-navbar">
             <!-- Nav-menu Div-->
             <div id="olympus-back-btn-div" class="olympus-back-btn-div"></div>
-            <div id="olympus-logo-div" class="default-logo-div">
+            <div id="olympus-logo-div" class="olympus-logo-div">
               <a id="olympus-settings" href="./olympus.html" class="olympus-logo">Olympus Settings</a>
             </div>
             <div id="olympus-home-icon" class="olympus-home-icon" >
