--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,17 @@
             <div id="contact-home-icon" class="contact-home-icon" >
             </div>       
         </nav>
-        <div class="contact-container"></div>
+    </div>
+    <div class="table-container">
+       <div class="contact-info-title">Tech Support Contact Information</div>
+       <div class="contact-information-container">
+           <div class="contact-param">Email:</div>
+           <div class="contact-info">EndoTechSupportLocal@stryker.com</div>
+       </div>
+       <div class="contact-information-container">
+        <div class="contact-param">Phone Number:</div>
+        <div class="contact-info">408-754-2257</div>
+    </div>
     </div>
     
 </body>
