--- a/storz.html
+++ b/storz.html
@@ -14,7 +14,7 @@
             <!-- Nav-menu Div-->
             <div id="storz-back-btn-div" class="storz-back-btn-div"></div>
             <div id="storz-logo-div" class="storz-logo-div">
-              <a id="storz-settings" href="./olympus.html" class="storz-logo">Olympus Settings</a>
+              <a id="storz-settings" href="./olympus.html" class="storz-logo">Storz Settings</a>
             </div>
             <div id="storz-home-icon" class="storz-home-icon" >
             </div>       
@@ -23,14 +23,14 @@
         <div class="storz-body-container">
             <div id="storz-title-div" class="storz-title-div">
                 <div class="storz-ccu-monitor-title-div">
-                    <div class="storz-title-text-span-div"><p class="storz-title-text"></p><span id="storz-specialty-title-span" class="storz-specialty-title-span"></span></div>
+                    <div class="storz-title-text-span-div"><p id="storz-title-text" class="storz-title-text"></p><span id="storz-specialty-title-span" class="storz-specialty-title-span"></span></div>
                 </div>
                 <div class="storz-text-div">Storz Settings</div>
             </div>
             <div id="storz-btn-div" class="storz-btn-div">
                 <div class="storz-select-ccu-div">Select CCU</div>
-                <div id="storz-1688" data-specialty="1688" class="storz-ccu-button">1688</div>
-                <div id="storz-1588" data-specialty="1588" class="storz-ccu-button">1588</div>
+                <div id="storz-1688" data-ccu="1688" class="storz-ccu-button">1688</div>
+                <div id="storz-1588" data-ccu="1588" class="storz-ccu-button">1588</div>
             </div>
             <!-- <div id="olympus-settings-container" class="olympus-settings-container">
                 <div id="olympus-params-div" class="olympus-params-div">
