Building out the Storz settings feature.

--- a/storz.html
+++ b/storz.html
@@ -14,7 +14,7 @@
             <!-- Nav-menu Div-->
             <div id="storz-back-btn-div" class="storz-back-btn-div"></div>
             <div id="storz-logo-div" class="storz-logo-div">
-              <a id="storz-settings" href="./olympus.html" class="storz-logo">Storz Settings</a>
+              <a id="storz-settings" href="./storz.html" class="storz-logo">Storz Settings</a>
             </div>
             <div id="storz-home-icon" class="storz-home-icon" >
             </div>       
@@ -26,11 +26,19 @@
                     <div class="storz-title-text-span-div"><p id="storz-title-text" class="storz-title-text"></p><span id="storz-specialty-title-span" class="storz-specialty-title-span"></span></div>
                 </div>
                 <div class="storz-text-div">Storz Settings</div>
+                <div id="storz-reps-div" class="storz-reps-div"></div>
             </div>
             <div id="storz-btn-div" class="storz-btn-div">
                 <div class="storz-select-ccu-div">Select CCU</div>
                 <div id="storz-1688" data-ccu="1688" class="storz-ccu-button">1688</div>
                 <div id="storz-1588" data-ccu="1588" class="storz-ccu-button">1588</div>
+            </div>
+            <div id="storz-monitors-div" class="storz-monitors-div">
+                <div id="storz-monitors-btn-div" class="storz-monitors-btn-div">
+                    <div class="storz-select-ccu-div">Select Monitor</div>
+                    <div id="4k" data-monitor="4K" class="storz-monitor-button">4K</div>
+                    <div id="Vision Pro" data-monitor="Vision Pro" class="storz-monitor-button">Vision Pro</div>
+                </div>
             </div>
             <!-- <div id="olympus-settings-container" class="olympus-settings-container">
                 <div id="olympus-params-div" class="olympus-params-div">
