Adding Storz feature functionality.

--- a/storz.html
+++ b/storz.html
@@ -37,25 +37,23 @@
                 <div id="storz-monitors-btn-div" class="storz-monitors-btn-div">
                     <div class="storz-select-ccu-div">Select Monitor</div>
                     <div id="4k" data-monitor="4K" class="storz-monitor-button">4K</div>
-                    <div id="Vision Pro" data-monitor="Vision Pro" class="storz-monitor-button">Vision Pro</div>
+                    <div id="Vision Pro" data-monitor="VisionPro" class="storz-monitor-button">Vision Pro</div>
                 </div>
             </div>
-            <!-- <div id="olympus-settings-container" class="olympus-settings-container">
-                <div id="olympus-params-div" class="olympus-params-div">
+            <div id="storz-settings-container" class="storz-settings-container">
+                <div id="storz-params-div" class="storz-params-div">
                 </div>
-                <div id="olympus-settings-div" class="olympus-settings-div">
+                <div id="storz-settings-div" class="storz-settings-div">
                 </div>
             </div>
-            <div id="olympus-monitor-title-div" class="olympus-monitor-title-div">
-                <div class="olympus-monitor-ccu-monitor-title-div"><div class="olympus-monitor-title-text-span-div"><p class="olympus-monitor-title-text">4K</p><span id="olympus-monitor-specialty-title-span" class="olympus-monitor-specialty-title-span"></span></div></div>
-                <div class="olympus-monitor-text-div">Olympus Settings</div>
+            <div id="storz-monitor-settings-container" class="storz-monitor-settings-container">
+                <div id="storz-monitor-params-div" class="storz-monitor-params-div">
+                </div>
+                <div id="storz-monitor-settings-div" class="storz-monitor-settings-div">
+                </div>
             </div>
-            <div id="olympus-monitor-settings-container" class="olympus-monitor-settings-container">
-                <div id="olympus-monitor-params-div" class="olympus-monitor-params-div">
-                </div>
-                <div id="olympus-monitor-settings-div" class="olympus-monitor-settings-div">
-                </div>
-            </div> -->
+           
+           
         </div>
 </body>
 </html>
