Added storz monitor title div.

--- a/storz.html
+++ b/storz.html
@@ -46,7 +46,15 @@
                 <div id="storz-settings-div" class="storz-settings-div">
                 </div>
             </div>
+            <div id="storz-monitor-title-div" class="storz-monitor-title-div">
+                <div class="storz-ccu-monitor-title-div">
+                    <div class="storz-title-text-span-div"><p id="storz-monitor-title-text" class="storz-title-text"></p><span id="storz-specialty-title-span" class="storz-specialty-title-span"></span></div>
+                </div>
+                <div class="storz-text-div">Storz Settings</div>
+                <div id="storz-reps-div" class="storz-reps-div"></div>
+            </div>
             <div id="storz-monitor-settings-container" class="storz-monitor-settings-container">
+                
                 <div id="storz-monitor-params-div" class="storz-monitor-params-div">
                 </div>
                 <div id="storz-monitor-settings-div" class="storz-monitor-settings-div">
