--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,17 @@
         </nav>
     </div>
     <div class="table-container">
-       <div class="contact-info-title">Tech Support Contact Information</div>
+       <!-- <div class="contact-info-title">Tech Support Contact Information</div> -->
+      
        <div class="contact-information-container">
-           <div class="contact-param">Email:</div>
-           <div class="contact-info">EndoTechSupportLocal@stryker.com</div>
+        <div id="contact-logo-email" class="contact-logo"></div>
+        <div class="contact-param">Email</div>
+        <div class="contact-info">EndoTechSupportLocal@stryker.com</div>
        </div>
+
        <div class="contact-information-container">
-        <div class="contact-param">Phone Number:</div>
+        <div id="contact-logo-phone" class="contact-logo"></div>
+        <div class="contact-param">Phone Number</div>
         <div class="contact-info">408-754-2257</div>
     </div>
     </div>
