Updated contact info.

--- a/contact.html
+++ b/contact.html
@@ -26,13 +26,14 @@
        <div class="contact-information-container">
         <div id="contact-logo-email" class="contact-logo"></div>
         <div class="contact-param">Email</div>
-        <div class="contact-info">EndoTechSupportLocal@stryker.com</div>
+        <div class="contact-info">endots@stryker.com</div>
        </div>
 
        <div class="contact-information-container">
         <div id="contact-logo-phone" class="contact-logo"></div>
         <div class="contact-param">Phone Number</div>
-        <div class="contact-info">408-754-2257</div>
+        <div class="contact-info">408-754-2037</div>
+        <div class="contact-info">877 478 7953 Toll Free</div>
     </div>
     </div>
     
